# datagraphs-client-py

./: .coverage  .gitignore  API.md  CHANGELOG.md  LICENSE  README.md  TODO  pyproject.toml  setup-venv.sh
.claude/: settings.json
.github/workflows/: docs.yml  release.yml
.sdlc/: .gitignore
.sdlc/solutions/: sol-001-shallow-dict-copy-aliases-inner-lists.md  sol-002-linear-scan-inside-loop-hidden-quadratic.md  sol-003-json-roundtrip-not-value-preserving-deepcopy.md  sol-004-frozen-dataclass-handrebuild-vs-replace.md  sol-005-regression-tests-must-assert-all-output-formats.md  sol-006-report-time-state-vs-intent-time-state.md  sol-007-consistency-invariant-blind-to-stripped-dimension.md  sol-008-recurring-bug-three-layers-needs-redesign.md  sol-009-redesign-dissolves-root-cause-three-failed-patches.md  sol-010-invariant-must-agree-with-renderer-on-every-dimension.md  sol-011-two-renderers-policed-by-invariant-render-from-one-model.md  sol-012-prevalidation-is-not-atomicity-cover-every-midapply-raise.md
datasets/: croplife-datasets-v1.1.json  syn-glgap-v1.1.json
docs/adr/: 0001-hybrid-baseline-diff-with-oplog-annotation.md  0002-public-boundary-recording-guard.md  0003-rename-identity-reconciliation.md  README.md
docs/api/: all-documents.html  apidocs-help.html  classIndex.html  fullsearchindex.json  index.html  (+28 more)
src/: app.py
temp/: analysis_output.txt  analyze_schemas.py  compare_schemas.py  comparison_output.txt  comprehensive_new_schema.json  comprehensive_old_schema.json  config_check.txt  git_branches.txt  git_checkout.txt  git_state.txt  integration_output.txt  new_schema.json  old_schema.json  old_schema_preview.txt  test_results.txt
tests/: client_test.py  dataset_test.py  gateway_test.py  schema_report_test.py  schema_test.py  schema_tracker_test.py  utils_test.py
tests_integration/: client_integration_test.py  comprehensive_schema_test.py  gateway_integration_test.py  integration_test.py  lib.py
(+13 files in other folders)
