[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"

[project]
name = "pydatagraphs"
version = "0.4.2"
description = "Datagraphs python client"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "DataGraphs", email = "info@datagraphs.com" },
]
keywords = ["datagraphs", "knowledge-graph", "api-client", "linked-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://datagraphs.com"
Repository = "https://github.com/datalanguage/datagraphs-client-py"
Issues = "https://github.com/datalanguage/datagraphs-client-py/issues"
Changelog = "https://github.com/datalanguage/datagraphs-client-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.uv.build-backend]
module-name = "datagraphs"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "-ra -q"
testpaths = [
    "tests",
    "tests_integration"
]
